SERVER-18912 Document and implement correct capped visibility rules

Fixes a bug introduced by SERVER-16444 changes.