src/mongo/db/storage/record_store_test_validate.h
@@ -68,7 +68,7 @@ public:
     ValidateTest()
         : _harnessHelper(newHarnessHelper()), _rs(_harnessHelper->newNonCappedRecordStore()) {}
 
-    OperationContext* newOperationContext() {
+    std::unique_ptr<OperationContext> newOperationContext() {
         return _harnessHelper->newOperationContext();
     }
 
